--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css">
-<!--     <link rel="stylesheet" href="css/webslides.css">
- -->  </head>
+    <!-- <link rel="stylesheet" href="css/webslides.css"> -->
+  </head>
   <body class="bg-light text-center text-bold">
     <div class="navbar-minimalist border-bottom">
       <img src="images/logo.png" width="100px" height="100px" alt="logo">
