--- a/index.html
+++ b/index.html
@@ -19,16 +19,9 @@
     </div>
     <div class="mt-5">
       <h2> Simple HTML </h2>
-      <p align=center><a class="btn btn-info" href="slides/pitch-onMangeKoi/index.html">Pitch ONMANGEKOI</a></p>
-      <p align=center><a class="btn btn-danger" href="slides/pitch-homTeachr/index.html">Pitch HOMETEACHR</a></p>
-      <p align=center><a class="btn btn-success" href="slides/pitch-easyMoving/index.html">Pitch EASYMOVING</a></p>
-    </div>
-
-    <div class="mt-5">
-      <h2> icloud </h2>
-      <p align=center><a class="btn btn-primary" href="https://www.icloud.com/keynote/0K65j0yef-CB3O0rF4nOOUvbw#Pitch_OnMangeKoi_fr">Pitch ONMANGEKOI</a></p>
-      <p align=center><a class="btn btn-warning" href="https://www.icloud.com/keynote/0aU4QpafmDVBFeERFJF58wvdQ#Pitch_homteachr_fr">Pitch HOMETEACHR</a></p>
-      <p align=center><a class="btn btn-success" href="https://www.icloud.com/keynote/01XlGbtARuLuy-gJ4rEiEKmMA#Pitch_easyMoving_fr">Pitch EASYMOVING</a></p>
+      <p align=center>Projet <strong>OnMangeKoi:</strong> <a class="btn btn-info" href="slides/pitch-onMangeKoi/index.html">Simple HTML</a> <a class="btn btn-info" href="https://www.icloud.com/keynote/0K65j0yef-CB3O0rF4nOOUvbw#Pitch_OnMangeKoi_fr">icloud</a> (responsive)</p>
+      <p align=center>Projet <strong>HomeTeacher:</strong> <a class="btn btn-danger" href="slides/pitch-homTeachr/index.html">Simple HTML</a> <a class="btn btn-danger" href="https://www.icloud.com/keynote/0aU4QpafmDVBFeERFJF58wvdQ#Pitch_homteachr_fr">icloud</a> (responsive)</p>
+      <p align=center>Projet <strong>EasyMoving:</strong> <a class="btn btn-success" href="slides/pitch-easyMoving/index.html">Simple HTML</a> <a class="btn btn-success" href="https://www.icloud.com/keynote/01XlGbtARuLuy-gJ4rEiEKmMA#Pitch_easyMoving_fr">icloud</a> (responsive)</p>
     </div>
 
 
