--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
   <body class="bg-light text-center text-bold">
     <div class="navbar-minimalist border-bottom">
       <img src="images/logo.png" width="100px" height="100px" alt="logo">
-      <h1>Batch #498 - Pitches</h1>
+      <h1>Batch #498 - Perso Projects Pitches</h1>
     </div>
     <div class="mt-5">
       <h2> Simple HTML </h2>
-      <p align=center>Projet <strong>OnMangeKoi:</strong> <a class="btn btn-info" href="slides/pitch-onMangeKoi/index.html">Simple HTML</a> <a class="btn btn-info" href="https://www.icloud.com/keynote/0K65j0yef-CB3O0rF4nOOUvbw#Pitch_OnMangeKoi_fr">icloud</a> (responsive)</p>
-      <p align=center>Projet <strong>HomeTeacher:</strong> <a class="btn btn-danger" href="slides/pitch-homTeachr/index.html">Simple HTML</a> <a class="btn btn-danger" href="https://www.icloud.com/keynote/0aU4QpafmDVBFeERFJF58wvdQ#Pitch_homteachr_fr">icloud</a> (responsive)</p>
-      <p align=center>Projet <strong>EasyMoving:</strong> <a class="btn btn-success" href="slides/pitch-easyMoving/index.html">Simple HTML</a> <a class="btn btn-success" href="https://www.icloud.com/keynote/01XlGbtARuLuy-gJ4rEiEKmMA#Pitch_easyMoving_fr">icloud</a> (responsive)</p>
+      <p align=center>Pitch <strong>OnMangeKoi:</strong> <a class="btn btn-info" href="slides/pitch-onMangeKoi/index.html">Simple HTML</a> <a class="btn btn-info" href="https://www.icloud.com/keynote/0K65j0yef-CB3O0rF4nOOUvbw#Pitch_OnMangeKoi_fr">icloud</a> (responsive)</p>
+      <p align=center>Pitch <strong>HomeTeacher:</strong> <a class="btn btn-danger" href="slides/pitch-homTeachr/index.html">Simple HTML</a> <a class="btn btn-danger" href="https://www.icloud.com/keynote/0aU4QpafmDVBFeERFJF58wvdQ#Pitch_homteachr_fr">icloud</a> (responsive)</p>
+      <p align=center>Pitch <strong>EasyMoving:</strong> <a class="btn btn-success" href="slides/pitch-easyMoving/index.html">Simple HTML</a> <a class="btn btn-success" href="https://www.icloud.com/keynote/01XlGbtARuLuy-gJ4rEiEKmMA#Pitch_easyMoving_fr">icloud</a> (responsive)</p>
     </div>
 
 
